# tiha

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh  install.sh  pyproject.toml  requirements.txt  run-dev.sh
.github/workflows/: release.yml
data/: styles.css  tiha.desktop  tr.org.pardus.tiha.policy
docs/: m11-eta-shutdown-bypass.md  m12-clone-reclaim.md
tiha/: __init__.py  __main__.py  app.py
tiha/core/: __init__.py  async_state.py  board.py  cli.py  console.py  image_info.py  logger.py  module.py  news_state.py  paths.py  preset.py  privilege.py  undo.py  update_check.py  utils.py
tiha/modules/: __init__.py  m00_precheck.py  m01_initial_passwords.py  m02_boot_password_wipe.py  m03_otp_secrets.py  m04_ssh_server.py  m05_samba_share.py  m06_remote_syslog.py  m07_hostname.py  m07_time_sync.py  m08_hostname.py  m08_system_update.py  m09_image_sanitize.py  m09_system_update.py  m10_image_sanitize.py  m11_power_management.py  m12_ahenk_reset.py  m13_password_dialog.py  m14_bios_password.py  m14_branding.py
tiha/ui/: __init__.py  main_window.py  pages.py  params.py
tools/: release.py  screenshot.py
